examples/typechecking/multiple_matching_impls.an

type Thing = nothing: Unit

ability Foo a =
    foo: fn a -> Unit

main () =
    // The call from which the `Foo a` constraint arises
    Foo.foo (Thing ())

// Two competing non-capturing impls for `Foo Thing` produce values with the same env shape,
// so implicit resolution genuinely can't pick one.
implicit candidate1: Foo Thing =
    Foo fn _ -> ()

implicit candidate2: Foo Thing =
    Foo fn _ -> ()

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/multiple_matching_impls.an:9:5
//  8 |     // The call from which the `Foo a` constraint arises
//    |     // error: Multiple matching implicits found for type Foo Thing required by foo: candidate1, candidate2
//  9 |     Foo.foo (Thing ())
//    |     ^^^^^^^
// 
// Found 1 error and 0 warnings

